force-app/main/default/objects/Donde_Voto__c/Donde_Voto__c.object-meta.xml
<CustomObject>
    <label>Donde Voto</label>
    <nameField>
        <label>Donde Voto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donde Voto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>