force-app/main/default/objects/Donde_Voto__c/fields/ChannelId__c.field-meta.xml
<CustomField>
    <fullName>ChannelId__c</fullName>
    <label>ChannelId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>