force-app/main/default/objects/Donde_Voto__c/fields/ContactKey__c.field-meta.xml
<CustomField>
    <fullName>ContactKey__c</fullName>
    <label>ContactKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>