force-app/main/default/objects/Donde_Voto__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <label>DNI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>