force-app/main/default/objects/Donde_Voto__c/fields/Nro_Mesa__c.field-meta.xml
<CustomField>
    <fullName>Nro_Mesa__c</fullName>
    <formula>Votante__r.Nro_Mesa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nro. Mesa</label>
    <type>Text</type>
</CustomField>