force-app/main/default/objects/Donde_Voto__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <formula>Votante__r.Orden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orden</label>
    <type>Text</type>
</CustomField>