force-app/main/default/objects/Donde_Voto__c/fields/Votante__c.field-meta.xml
<CustomField>
    <fullName>Votante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Votante</label>
    <referenceTo>Votante__c</referenceTo>
    <relationshipLabel>Donde Voto</relationshipLabel>
    <relationshipName>Donde_Voto</relationshipName>
    <type>Lookup</type>
</CustomField>