force-app/main/default/objects/Donde_Voto__c/fields/Whatsapp_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Mobile_Number__c</fullName>
    <label>Whatsapp Mobile Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>