force-app/main/default/objects/Donde_Voto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Votante__c</columns>
    <columns>Nro_Mesa__c</columns>
    <columns>Orden__c</columns>
    <columns>Whatsapp_Mobile_Number__c</columns>
    <columns>DNI__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>